--- a/insects.html
+++ b/insects.html
@@ -39,3 +39,11 @@
     
 </body>
 </html>
+
+<div class = "container">
+  <img src="PaperWaso (1).jpg" class="img-fluid" alt="PaperWaso" width="300" height="300">
+  <img src="Netwing.jpg" class="img-fluid" alt="Netwing" width="300" height="300" >
+  <img src="Odonata.jpg" class="img-fluid" alt="Odonata" width="300" height="300"></div>
+ 
+<div class = "container"><img src="PaperWaso (1).jpg" class="img-thumbnail" alt="PaperWaso" style="width: 50px;  height:50px;"><img src="Netwing.jpg" class="img-thumbnail" alt="Netwing" style="width: 50px; height:50px;"><img src="Odonata.jpg" class="img-thumbnail" alt="Odonata" style="width: 50px; height:50px;"></div>
+<p></p>
