--- a/insects.html
+++ b/insects.html
@@ -47,3 +47,53 @@
  
 <div class = "container"><img src="PaperWaso (1).jpg" class="img-thumbnail" alt="PaperWaso" style="width: 50px;  height:50px;"><img src="Netwing.jpg" class="img-thumbnail" alt="Netwing" style="width: 50px; height:50px;"><img src="Odonata.jpg" class="img-thumbnail" alt="Odonata" style="width: 50px; height:50px;"></div>
 <p></p>
+
+<table class="table table-bordered table-hover table-striped table-condensed" style="text-align: center;"> 
+  <caption class="caption-top">Letter , insect ,city , river</caption>
+  <thead>
+  <tr>
+      <th>Letter</th>
+      <th>Insect</th>
+      <th>City</th>
+      <th>River</th>
+  </tr>
+  </thead>
+  <tbody class="table-striped">
+  <tr>
+      <th>P</th>
+      <td>PaperWaso</td>
+      <td>Philadelphia</td>
+      <td>Pack River </td>
+  </tr>
+  <tr>
+      <th>O</th>
+      <td>Odonata</td>
+      <td>Omaha</td>
+      <td>Otay River</td>
+  </tr>
+  <tr>
+      <th>R</th>
+      <td>Ratflea</td>
+      <td>Richmond</td>
+      <td>River</td>
+  </tr>
+  <tr>
+      <th>A</th>
+      <td>Ant</td>
+      <td>Arizona</td>
+      <td>Abita River</td>
+  </tr>
+  <tr>
+      <th>N</th>
+      <td>Netwing</td>
+      <td>new haven</td>
+      <td>Nabesna River</td>
+  </tr>
+  <tr>
+      <th>D</th>
+      <td>Dungbeetle</td>
+      <td>Dallas</td>
+      <td>D River</td>
+  </tr>  
+  </tbody>
+</table>
