--- a/insects.html
+++ b/insects.html
@@ -37,8 +37,6 @@
 </div>
 <p>The insects name row breaks first because the screen width of col-sm is less then col-md</p>
     
-</body>
-</html>
 
 <div class = "container">
   <img src="PaperWaso (1).jpg" class="img-fluid" alt="PaperWaso" width="300" height="300">
@@ -97,3 +95,37 @@
   </tr>  
   </tbody>
 </table>
+
+ <button type="button" class="btn">P</button>
+ <button type="button" class="btn">O</button>
+ <button type="button" class="btn">R</button>
+ <button type="button" class="btn">A</button>
+ <button type="button" class="btn">N</button>
+ <button type="button" class="btn">D</button>
+ <div class="btn-toolbar" role="group" aria-label="Basic mixed styles example">
+ <div class="btn-group" role="group" aria-label="Basic example">
+    <button type="button" class="btn btn-success">P</button>
+    <button type="button" class="btn btn-success">O</button>
+    <button type="button" class="btn btn-success">N</button>
+  </div>
+  <div class="btn-group" role="group" aria-label="Basic example">
+    <button type="button" class="btn btn-warning">R</button>
+    <button type="button" class="btn btn-warning">A</button>
+  </div>
+  <div class="btn-group" role="group" aria-label="Basic example">
+    <button type="button" class="btn btn-danger">D</button>
+  </div>
+</div>
+
+<div class="container">
+  <div class="dropdown">
+      <button type="button" class="dropdown-toggle" data-bs-toggle="dropdown">dropdown</button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="Basic.html">basic</a>
+          <a class="dropdown-item" href="Advanced.html">advanced</a>
+      </div>
+  </div>
+  </div>
+
+</body>
+</html>
