--- a/insects.html
+++ b/insects.html
@@ -165,7 +165,29 @@
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 
-
+</div>
+<div class="col-md">
+<div class="card" style="width: 18rem;">
+  <img src="PaperWaso (1).jpg" style="width: 250px;  height:250px;"class="img-fluid" alt="paperwaso">
+  <div class="card-body">
+    <h5>paperwaso</h5>
+    <p>Paper wasps are vespid wasps that gather fibers from dead wood and plant stems, which they mix with saliva, and use to construct nests made of gray or brown papery material. Some types of paper wasps are also sometimes called umbrella wasps, due to the distinctive design of their nests </p>
+  </div>
+</div>
+<div class="card" style="width: 18rem;">
+  <img src="Netwing.jpg"  style="width: 250px;  height:250px;"class="img-fluid" alt="Netwing">
+  <div class="card-body">
+      <h5>Netwing</h5>
+      <p>net-winged beetle. net-winged beetle, (family Lycidae), any of some 2,800 species of soft-bodied, brightly coloured</p> </div>
+</div>
+<div class="card" style="width: 18rem;">
+  <img src="Odonata.jpg" style="width: 250px;  height:250px;" class="img-fluid" alt="Odonata">
+  <div class="card-body">
+      <h5>Odonata</h5>
+      <p>Odonata is an order of flying insects that includes the dragonflies and damselflies. Members of the group first appeared during the Triassic, though members of their total group, Odonatoptera, first appeared in Late Carboniferous.</p>
+  </div>
+</div>
+</div>
 
 </body>
 </html>
